# ds-501-cs4-public

./: .gitignore  Deena Conjecture.ipynb  Karen_conjecture.ipynb  README.md  deena_conjecture.ipynb  main.py  pyproject.toml
demographic_data/: median_incomes.csv  nyc_subway_historic_ridership.tsv  ridership_data.csv  total_population_by_race_ethnicity.csv
src/: load_census_data.py  load_demographic_data.py  load_mta_dataset.py  load_ridership_data.py  underserved_areas.py
